feat: amenities endpoints